--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -1,4 +1,4 @@
-name: deploy to staging environment
+name: Deploy To staging
 
 on:
   push:
@@ -37,3 +37,19 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  pagespeed-automation:
+    needs: staging
+    name: Performance Metrics for desktop
+    runs-on: ubuntu-latest
+    steps:
+      - name: PageSpeed Insights - Desktop
+        uses: jakepartusch/psi-action@v1.3
+        with:
+          url: ${{ secrets.STAGING_URL }}
+          strategy: desktop
+      - name: PageSpeed Insights - mobile
+        uses: jakepartusch/psi-action@v1.3
+        with:
+          url: ${{ secrets.STAGING_URL }}
+          strategy: mobile
+  o
