--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - redesign2023
 jobs:
-  staging:
+  staging-deploy:
     concurrency: ci-${{ github.ref }}
     runs-on: ubuntu-latest
     environment: staging
@@ -38,7 +38,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   pagespeed-automation:
-    needs: staging
+    needs: staging-deploy
     name: Performance from pagespeed
     runs-on: ubuntu-latest
     environment: staging
@@ -56,7 +56,7 @@ jobs:
           url: ${{ secrets.STAGING_URL }}
           strategy: mobile
   accesibility-automation:
-    needs: staging
+    needs: staging-deploy
     name: Accesibility
     runs-on: ubuntu-latest
     environment: staging
