--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -24,7 +24,7 @@ jobs:
           strategy: mobile
   deploy:
     runs-on: ubuntu-latest
-    if: github.event.issue.pull_request && contains(github.event.comment.body, '/deploy')
+    if: github.event.issue.pull_request
     steps:
       - name: Add comment to PR
         uses: actions/github-script@v6
