--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Run PageSpeed Insights - Desktop
         id: desktop-psi
         run: |
-          output=$(bash -c "jakepartusch/psi-action@v1.3 --url="https://www.bioconductor.org/" --strategy=desktop" 2>&1)
+          output=$(bash -c "jakepartusch/psi-action@v1.3 "https://www.bioconductor.org/" --strategy=desktop" 2>&1)
           echo "::set-output name=psi-output::$output"
       - name: results
         id: results
