--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Desktop
         id: desktop
         run: |
-          echo "DESKTOP_RESULTS=$(node psi.js https://www.bioconductor.org/ desktop 70)" >> $GITHUB_OUTPUT
+          echo "DESKTOP_RESULTS<<EOF" >> $GITHUB_OUTPUT
+          echo "$(node psi.js https://www.bioconductor.org/ desktop 70)" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_ENV
       - name: add_comment
         run: echo ${{ steps.desktop.outputs.DESKTOP_RESULTS }}
   run-pagespeed-performance-mobile:
