output instead of env

--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -16,11 +16,11 @@ jobs:
       - name: Desktop
         id: desktop
         run: |
-          echo "DESKTOP_RESULTS<<EOF" >> $GITHUB_OUTPUT
-          echo "$(node psi.js https://www.bioconductor.org/ desktop 70)" >> $GITHUB_OUTPUT
+          echo "DESKTOP_RESULTS<<EOF" >> $GITHUB_ENV
+          echo "$(node psi.js https://www.bioconductor.org/ desktop 70)" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
       - name: add_comment
-        run: echo ${{ steps.desktop.outputs.DESKTOP_RESULTS }}
+        run: echo ${{ env.DESKTOP_RESULTS }}
   run-pagespeed-performance-mobile:
     name: Performance Metrics for mobile
     runs-on: ubuntu-latest
