--- a/.github/workflows/Kpi.yaml
+++ b/.github/workflows/Kpi.yaml
@@ -2,21 +2,23 @@ name: KPI automation
 on:
   push:
     branches:
-      - main
+      - redesign2023
   pull_request_target:
     types: [opened, reopened, synchronize]
-    branches-ignore:
-      - redesign2023
+    branches:
+      - "fix/**"
+      - "feat/**"
   workflow_run:
     workflows:
       - Pr - Preview
       - Deploy To staging
     types:
       - completed
-
 jobs:
-  pagespeed_automation:
-    name: Pagespeed Results
+  kpi_metrics:
+    permissions:
+      pull-requests: write
+    name: All KPI metrics
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -28,34 +30,38 @@ jobs:
           else
                 echo "URL_TO_USE=http://pr-preview-bioconductor-pr${{github.event.number}}.s3-website-us-east-1.amazonaws.com" >> "$GITHUB_ENV"
           fi
-      - name: PageSpeed Insights - Desktop
-        uses: jakepartusch/psi-action@v1.3
-        with:
-          url: ${{ env.URL_TO_USE }}
-          strategy: desktop
-      - name: PageSpeed Insights - Mobile
-        uses: jakepartusch/psi-action@v1.3
-        with:
-          url: ${{ env.URL_TO_USE }}
-          strategy: mobile
-  accesibility_automation:
-    name: Accesibility from Axe Results
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      - name: find-url
-        run: |
-          if [ ${{github.ref_name }} == redesign2023 ]; then
-                echo "URL_TO_USE=${{vars.STAGING_URL}}" >> "$GITHUB_ENV"
-          else
-                echo "URL_TO_USE=http://pr-preview-bioconductor-pr${{github.event.number}}.s3-website-us-east-1.amazonaws.com" >> "$GITHUB_ENV"
-          fi
-      - name: install node for axe
-        uses: actions/setup-node@v3
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v3.7.0
         with:
           node-version: 18
-      - name: install axe
-        run: npm install @axe-core/cli -g
+      - name: install psi and axe
+        run: |
+          npm install psi
+          npm install @axe-core/cli -g
+      - name: run desktop psi
+        run: |
+          echo "DESKTOP_PSI_RESULTS<<EOF" >> $GITHUB_ENV
+          echo "$(node psi.js ${{env.URL_TO_USE}} desktop 50)" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+      - name: run mobile psi
+        run: |
+          echo "MOBILE_PSI_RESULTS<<EOF" >> $GITHUB_ENV
+          echo "$(node psi.js ${{env.URL_TO_USE}} mobile 50)" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+      - name: add_comment_pageSpeed
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: |
+            ${{env.DESKTOP_PSI_RESULTS}}
+            ${{env.MOBILE_PSI_RESULTS}}
+          message-id: psi
       - name: run axe accesibility test
-        run: axe  ${{ env.URL_TO_USE }}
+        run: |
+          echo "AXE_RESULTS<<EOF" >> $GITHUB_ENV
+          echo "$(axe ${{env.URL_TO_USE}})" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+      - name: add_comment_axe
+        uses: mshick/add-pr-comment@v2
+        with:
+          message: ${{env.AXE_RESULTS}}
+          message-id: axe
