--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -28,29 +28,21 @@ jobs:
           echo "MOBILE_PSI_RESULTS<<EOF" >> $GITHUB_ENV
           echo "$(node psi.js https://www.bioconductor.org/ mobile 50)" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
-  slackNotification-psi-Desktop:
-    needs: kpi_metrics
-    name: Slack Notification
+  slack-notifications:
+    name: notify slack
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/redesign2023'
-    steps:
-      - uses: actions/checkout@v2
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_TITLE: Desktop KPIs
-          SLACK_MESSAGE: ${{env.DESKTOP_PSI_RESULTS}}
-  slackNotification-psi-Mobile:
     needs: kpi_metrics
-    name: Slack Notification
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/redesign2023'
     steps:
-      - uses: actions/checkout@v2
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
+      - name: send notification
+        uses: 8398a7/action-slack@v2
+        with:
+          status: custom
+          payload: |
+            {
+              "text": "${{env.DESKTOP_PSI_RESULTS}} \n ${{env.MOBILE_PSI_RESULTS}}",
+            }
         env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_TITLE: Desktop KPIs
-          SLACK_MESSAGE: ${{env.MOBILE_PSI_RESULTS}}
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK}} # required
+        if: always() # Pick up events even if the job fails or is canceled.
