--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -45,4 +45,4 @@ jobs:
             }
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK}} # required
-        if: always() # Pick up events even if the job fails or is canceled.
+        if: always()
