--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -38,11 +38,8 @@ jobs:
       - name: send notification
         uses: 8398a7/action-slack@v2
         with:
-          status: custom
-          payload: |
-            {
-              "text": "${{env.DESKTOP_PSI_RESULTS}} \n ${{env.MOBILE_PSI_RESULTS}}",
-            }
+          status: ${{ job.status }}
+          text: "${{env.DESKTOP_PSI_RESULTS}} \n ${{env.MOBILE_PSI_RESULTS}}"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK}} # required
         if: always()
