--- a/.github/workflows/Kpi.yaml
+++ b/.github/workflows/Kpi.yaml
@@ -65,3 +65,19 @@ jobs:
         with:
           message: ${{env.AXE_RESULTS}}
           message-id: axe
+      - name: send notification psi
+        if: ${{ github.ref == 'refs/heads/redesign2023' }}
+        uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          text: "${{env.DESKTOP_PSI_RESULTS}} \n ${{env.MOBILE_PSI_RESULTS}}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK}}
+      - name: send notification axe
+        if: ${{ github.ref == 'refs/heads/redesign2023' }}
+        uses: 8398a7/action-slack@v2
+        with:
+          status: ${{ job.status }}
+          text: "${{env.AXE_RESULTS}}"
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK}}
