--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -30,5 +30,7 @@ jobs:
           VALIDATE_JSON: false
           VALIDATE_R: false
           VALIDATE_RUBY: false
+          VALIDATE_JAVASCRIPT_STANDARD: false
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           DEFAULT_BRANCH: redesign2023
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
