--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -22,6 +22,7 @@ jobs:
       - name: Lint Code Base
         uses: super-linter/super-linter/slim@v5
         env:
+          LINTER_RULES_PATH: /
           VALIDATE_ALL_CODEBASE: false
           VALIDATE_GITHUB_ACTIONS: false
           VALIDATE_MARKDOWN: false
@@ -31,6 +32,8 @@ jobs:
           VALIDATE_R: false
           VALIDATE_RUBY: false
           VALIDATE_JAVASCRIPT_STANDARD: false
-          JAVASCRIPT_ES_CONFIG_FILE: /.eslintrc.json
+          VALIDATE_JAVASCRIPT_ES: true
+          CSS_FILE_NAME: .stylelintrc.json
+          JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           DEFAULT_BRANCH: redesign2023
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
