--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -18,7 +18,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
       - name: Lint Code Base
         uses: super-linter/super-linter/slim@v5
         env:
@@ -31,6 +30,7 @@ jobs:
           VALIDATE_JSON: false
           VALIDATE_R: false
           VALIDATE_RUBY: false
+          VALIDATE_JAVASCRIPT_STANDARD: false
           JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
           DEFAULT_BRANCH: redesign2023
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
