--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 18
       - name: install psi and axe
-        run: npm install @axe-core/cli -g
+        run: npm install psi
       - name: run psi
         run: $DESKTOP_PSI_RESULTS << $(node psi.js ${{env.URL_TO_USE}} desktop 50)
       - name: do console
