--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -16,7 +16,7 @@ jobs:
       - name: install psi
         run: npm install psi
       - name: Mobile
-        run: DESKTOP_PSI_RESULTS=$(node psi.js https://www.bioconductor.org/ desktop 50)
+        run: DESKTOP_PSI_RESULTS << $(node psi.js https://www.bioconductor.org/ desktop 50)
       - name: add_comment
         run: |
           echo "$DESKTOP_PSI_RESULTS"
